tree-wide: add license header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: Copyright 2025 Anthon Open Source Community
+# SPDX-License-Identifier: GPL-2.0-or-later
 cmake_minimum_required(VERSION 3.12)
 project(erectus LANGUAGES C CXX VERSION 0.1.0)
 
